<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.FilterFragment">

    <ImageButton
        android:id="@+id/back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.010" />

    <TextView
        android:id="@+id/Filter"
        android:layout_width="167dp"
        android:layout_height="26dp"
        android:fontFamily="@font/tilt"
        android:text="@string/details_advice5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />


    <Button
        android:id="@+id/btnSecurity"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_1"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/btnNational"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_2"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/btnPublic"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_3"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <Button
        android:id="@+id/btnCruz"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_4"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <Button
        android:id="@+id/btnCivil"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_5"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <Button
        android:id="@+id/btnFire"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_6"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/btnRobos"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_8"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <Button
        android:id="@+id/btnPet"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_9"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <Button
        android:id="@+id/btnObject"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_10"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/btnExt"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_11"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <Button
        android:id="@+id/btnAgresion"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_12"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <Button
        android:id="@+id/all"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:text="@string/watch_7"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/piedra"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />


</androidx.constraintlayout.widget.ConstraintLayout>