<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/loginlayout">

    <ImageButton
        android:id="@+id/back_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/regresar"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg1Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/black"
        android:text="@string/msjLogin1"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/msg2Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/msg2Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/msjLogin2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp" />


    <Button
        android:id="@+id/forgetButton"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/regular"
        android:onClick="onclick"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/zafiro"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/degradado"
        android:fontFamily="@font/black"
        android:onClick="onclick"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/msjTien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:background="@drawable/degradado"
        android:fontFamily="@font/black"
        android:onClick="onclick"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="textEnd"

        android:drawableLeft="@drawable/google"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/msjO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="O"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806" />

    <TextView
        android:id="@+id/msjTien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/noTiene"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="right"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/black"
        android:onClick="onclick"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/zafiro"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCorreo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        app:startIconContentDescription="@string/email"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/zafiro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCorreo1"
            android:layout_width="364dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="68dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        app:startIconContentDescription="@string/password"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/zafiro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword1"
            android:layout_width="364dp"
            android:layout_height="60dp"
            android:hint="Contraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
