<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_notify"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="20dp"
    card_view:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_imageProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/owl"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/item_nickname_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/black"
            android:text="@string/nick_name"
            android:textColor="@color/zafiro"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="125dp"
            android:fontFamily="@font/regular"
            android:text="@string/details"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/regular"
            android:text="@string/details_2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="155dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/regular"
            android:text="@string/choose_category"
            android:textColor="@color/zafiro"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_date_notify"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="163dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/regular"
            android:text="09/06/2023"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/idPost"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/regular"
            android:textColor="@color/transparente"
            android:text="id"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>